fixing timeline dots on mobile

--- a/public/styles/sass/_timeline.scss
+++ b/public/styles/sass/_timeline.scss
@@ -144,10 +144,18 @@
 	border-radius: 50%;
 	box-shadow: 0 0 0 5px lighten($silver, 10%);
 
+	@media screen and (max-width: $tablet) {
+		width: 20px;
+		height: 20px;
+		margin-left: -10px;
+		top: 60px;
+	}
+
 	@media screen and (max-width: $phone) {
 		left: 0;
-		margin-left: -24px;
-	}	
+		margin-left: -22px;
+
+	}
 }
 
 .is-hidden { visibility: hidden; }
